--- a/src/components/css/Products.css
+++ b/src/components/css/Products.css
@@ -50,3 +50,22 @@ img {
   color: #fff;
   font-weight: bold;
 }
+
+@media screen and (max-width: 720px) {
+  .Product-Items {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .Product-Items {
+    grid-template-columns: 1fr;
+  }
+
+  .featured-products h2::after {
+    display: none;
+  }
+  .featured-products h2::before {
+    display: none;
+  }
+}
